[package]
name = "verne"
version = "0.1.0"
authors = ["Sahid Orentino Ferdjaoui <sahid.ferdjaoui@redhat.com>",]
license = "Apache-2.0"
readme = "README.md"
description = "A human virtual resources creator from templates"
keywords = ["libvirt", "virtualization", "KVM", "QEMU", "Xen",]

[dependencies]
virt = "0.2"
yaml-rust = "0.3"
getopts = "0.2"
log = "0.3"
env_logger = "0.4"